--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <div id="container3D"></div>
     </main>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js?v=2"></script>
   </body>
 </html>
